# QWeSDK

./: .gitignore  README.md  example_usage.py  pyproject.toml  test_bigtrader.py
docker/: README.md  docker-compose.yml  docker_manager.bat  docker_manager.sh  redis.conf
docker/app/: Dockerfile  celery_app.py  entrypoint.sh  main.py  qwesdk-1.0.0-py3-none-any.whl  qwesdk_entrypoint.py  requirements.txt  tasks.py
m/: __init__.py
m/config/: __init__.py  config.json
m/core/: __init__.py  array_manager.py  expression_analyzer.py  order_manager.py  plotting.py  ta_engine.py  trading_cost_manager.py
m/db/: __init__.py  dbmgr.py  sql_builder.py  udf.py
m/extract_data/: __init__.py  extract_data_v1.py
m/input/: __init__.py  input_v1.py
m/selector/: __init__.py  selector.py
m/strategy/: strategy_v1.py  strategy_v2.py
m/trader/: __init__.py  trader_v1.py  trader_v2.py
